--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </div>
       </section>
     </main>
-    <script type="module" src="index.js" defer></script>
+    <script type="module" src="./index.js" defer></script>
   </body>
 </html>
